[tool.poetry]
name = "competitive_programming"
version = "0.0.0"
description = "Algo problems et al"
authors = ["Lachlan Marnham"]
maintainers = ["Lachlan Marnham"]
license = "MIT"
repository="git@github.com:LachlanMarnham/competitive_programming.git"
homepage="https://github.com/LachlanMarnham/competitive_programming"

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-commas = "^2.0"
flake8-isort = "^2.7"
flake8-quotes = "^2.1"
isort = "^4.3"
pytest = "^4.3"
pytest-cov = "^2.8"
pytest-env = "^0.6"
pytest-random-order = "^1.0"

[build-system]
requires = ["poetry==1.1.3"]
build-backend = "poetry.masonry.api"
