[tool.poetry]
name = "competitive_programming"
version = "0.0.0"
description = "Algo problems et al"
authors = ["Lachlan Marnham"]
maintainers = ["Lachlan Marnham"]
license = "MIT"
repository="git@github.com:LachlanMarnham/competitive_programming.git"
homepage="https://github.com/LachlanMarnham/competitive_programming"

[tool.poetry.dependencies]
python = "~3.7"

[tool.poetry.dev-dependencies]
flake8 = "^4.0"
flake8-commas = "^2.1"
flake8-isort = "^4.1"
flake8-quotes = "^3.3"
isort = "^5.10"
pytest = "^7.1"
pytest-cov = "^3.0"
pytest-random-order = "^1.0"

[build-system]
requires = ["poetry==1.1.3"]
build-backend = "poetry.masonry.api"
