[tool.poetry]
name = "competitive_programming"
version = "0.0.0"
description = "Algo problems et al"
authors = ["Lachlan Marnham"]
maintainers = ["Lachlan Marnham"]
license = "MIT"
repository="git@github.com:LachlanMarnham/competitive_programming.git"
homepage="https://github.com/LachlanMarnham/competitive_programming"

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.dev-dependencies]
black = "^22.8"
flake8 = "^5.0"
Flake8-pyproject = "^1.1"
isort = "^5.10"
pytest = "^7.1"
pytest-cov = "^3.0"
pytest-random-order = "^1.0"
ipython = "^7.32"
sqlparse = "^0.4"
SQLAlchemy = "^2.0"

[build-system]
requires = ["poetry==1.1.3"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
extend-ignore = ['E203']
max-line-length = 120
